--- a/public/less/style.less
+++ b/public/less/style.less
@@ -55,7 +55,7 @@ td.title {
 
 		a {
 			text-decoration: none;
-			padding: 6px 5% 6px 10%;
+			padding: 6px 0 6px 10%;
 			border-left: 5px solid;
 		}
 		p {
